--- a/client/bower.json
+++ b/client/bower.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "angular": "~1.2.19",
     "angular-route": "~1.2.19",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "ng-Fx": "~0.4.1",
+    "angularjs-geolocation": "~0.1.1"
   }
 }
